--- a/config/locales/translation.json
+++ b/config/locales/translation.json
@@ -9,5 +9,7 @@
         "orderPickedUp"    :"Su pedido #{{orderNum}} fue retirado!",
         "orderNotPickedUp" :"Su pedido #{{orderNum}} Su pedido no fue retirado. Lo olvidó?",
         "orderDispatched"  :"Su pedido #{{orderNum}} está en camino!",
-        "orderDelivered"   :"Su pedido #{{orderNum}} fue entregado. Gracias! "
+        "orderDelivered"   :"Su pedido #{{orderNum}} fue entregado. Gracias! ",
+       "orderRequested_pickup"   : "'Tiempo para Retirada: '+ pickuptime +'\n'+ 'Cliente: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Detalhes do Pedido:' + orderDetail +'\n';",
+       "orderRequested_delivery" : "'Tiempo para Entrega: '+ deliverytime +'\n'+ 'Cliente: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Detalles del Pedido:' + orderDetail +'\n';"
 }
