--- a/config/locales/en/translation.json
+++ b/config/locales/en/translation.json
@@ -1,15 +1,27 @@
 {
         "payProcessed"     :"Payment Processed - Order #{{orderNum}}",
+        "payProcessedMessage" :"custName +"'s payment was processed at "+ timestamp.now();”,
         "payFailed"        :"Payment Failed - Order #{{orderNum}}",
-        "orderDeclined"    :"{{company}} did not accept your order at this time. Please try again some other time.",
-        "orderAccepted"    :"Order accepted at {{time}}",
+        "payFailedMessage" :"custName +" payment failed at "+ timestamp.now();",
+        "orderDeclined"    :"Order Declined",
+        "orderDeclinedMessage" :"{{company}} did not accept your order at this time. Please try again some other time.",
+        "orderAccepted"    :"Order Accepted",
+         "orderAcceptedMessage"    :"Order accepted at {{time}}",
         "orderQueued"      :"Your order #{{orderNum}} is queued for preparation",
-        "orderCooking"     :"Your order #{{orderNum}} started cooking",
-        "orderReady"       :"Your order #{{orderNum}} is ready!",
+        "orderCooking"     :"Order Cooking",
+        "orderCookingMessage"     :"Your order #{{orderNum}} started cooking",
+         "orderReady"       :"Order Ready!",
+        "orderReadyMessage" :"Your order #{{orderNum}} is ready!",
         "orderPickedUp"    :"Your order #{{orderNum}} was picked up!",
-        "orderNotPickedUp" :"Your order #{{orderNum}} was not picked up! Did you forget?",
+           "orderPickedUpMessage"    :"Your order #{{orderNum}} was picked up!",
+        "NoShow" :"No Show",
+         "NoShowMessage" :"Your order #{{orderNum}} was not picked up! Did you forget?",
         "orderDispatched"  :"Your order #{{orderNum}} is on its way!",
+                "orderDispatchedMessage"  :"Your order #{{orderNum}} is on its way!",
         "orderDelivered"   :"Your order #{{orderNum}} was delivered. Thanks again! ",
-        "orderRequested_delivery"   :"'Delivery Time: '+ deliverytime +'\n'+ 'Customer: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Order Details: ' + orderDetail +'\n';",
-        "orderRequested_pickup"   :"'Pickup Time: '+ pickuptime +'\n'+ 'Customer: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Order Details: ' + orderDetail +'\n';"
+              "orderDeliveredMessage"   :"Your order #{{orderNum}} was delivered. Thanks again! ",
+        "orderRequested_delivery"   :"'Delivery Order Request",
+        "orderRequested_deliveryMessage"   :"'Delivery Time: '+ deliverytime +'\n'+ 'Customer: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Order Details: ' + orderDetail +'\n';",
+         "orderRequested_pickup"   :"'Takeout Order Request",
+        "orderRequested_pickupMessage"   :"'Pickup Time: '+ pickuptime +'\n'+ 'Customer: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Order Details: ' + orderDetail +'\n';"
 }
