--- a/config/locales/en/translation.json
+++ b/config/locales/en/translation.json
@@ -7,7 +7,8 @@
         "orderDeclinedMessage" :"{{company}} did not accept your order at this time. Please try again some other time.",
         "orderAccepted"    :"Order Accepted",
          "orderAcceptedMessage"    :"Order accepted at {{time}}",
-        "orderQueued"      :"Your order #{{orderNum}} is queued for preparation",
+        "orderQueued"      :"Order In Queue",
+        "orderQueuedMessage"    :"Your order #{{orderNum}} is queued for preparation",
         "orderCooking"     :"Order Cooking",
         "orderCookingMessage"     :"Your order #{{orderNum}} started cooking",
          "orderReady"       :"Order Ready!",
