--- a/config/locales/pt-BR/translation.json
+++ b/config/locales/pt-BR/translation.json
@@ -10,6 +10,6 @@
       "orderNotPickedUp" : "Seu Pedido Não foi Retirado. Você esqueceu?",
       "orderEnRoute"     : "Seu Pedido está a caminho",
       "orderDelivered"   : "Seu Pedido foi Entregue",
-      "orderRequested_pickup"   : "'Tempo para Retirada: '+ pickuptime +'\n'+ 'Cliente: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Detalhes do Pedido:' + orderDetail +'\n';",
-      "orderRequested_delivery" : "'Tempo para Entrega: '+ deliverytime +'\n'+ 'Cliente: '+ this.passport.user.first_name +' '+ this.passport.user.last_name.charAt(0) +'\n'+'Detalhes do Pedido:' + orderDetail +'\n';"
+      "orderRequested_pickup"   : "Tiempo para Retirada: {{pickuptime}}\nCliente: {{custName}}\nDetalhes do Pedido: {{orderDetail}}",
+      "orderRequested_delivery" : "'Tiempo para Entrega: {{deliverytime}}\nCliente: {{custName}}\nDetalles del Pedido: {{orderDetail}}"
 }
