--- a/config/locales/es/translation.json
+++ b/config/locales/es/translation.json
@@ -1,15 +1,26 @@
 {
         "payProcessed"     :"Pago Procesado - Pedido #{{orderNum}}",
+        "payProcessedMessage" : "{{custName}} pago se procesó en {{timestamp.now()}}",
         "payFailed"        :"Error en el pago - Pedido #{{orderNum}}",
-        "orderDeclined"    :"{{company}} did not accept your order at this time. Please try again some other time.",
-        "orderAccepted"    :"Solicitud aceptada en {{time}}",  
-        "orderQueued"      :"Su pedido #{{orderNum}} está en fila para preparación",
-        "orderCooking"     :"Su pedido #{{orderNum}} se comenzó a cocinar",
-        "orderReady"       :"Su pedido #{{orderNum}} está listo!",
-        "orderPickedUp"    :"Su pedido #{{orderNum}} fue retirado!",
-        "orderNotPickedUp" :"Su pedido #{{orderNum}} Su pedido no fue retirado. Lo olvidó?",
-        "orderDispatched"  :"Su pedido #{{orderNum}} está en camino!",
-        "orderDelivered"   :"Su pedido #{{orderNum}} fue entregado. Gracias! ",
+        "payFailedMessage" : "{{custName}} pago falló en {{timestamp.now()}}",
+        "orderDeclined"    :"Orden Rechazada",
+        "orderDeclinedMessage" : "{{company}} no aceptó su pedido en este momento. Inténtalo de nuevo en otro momento.",
+        "orderAccepted"    :"Solicitud Aceptada",  
+        "orderAcceptedMessage" : "Solicitud aceptada en {{time}}",
+        "orderQueued"      : "Ordenar en Cola", 
+        "orderQueuedMessage" : "Su pedido #{{orderNum}} está en fila para preparación",
+        "orderCooking"     :"Ordenar la Cocina",
+        "orderCookingMessage" :"Su pedido #{{orderNum}} se comenzó a cocinar",
+        "orderReady"       :"Ordenar Listo",
+        "orderReadyMessage" : "Su pedido #{{orderNum}} está listo!",
+        "orderPickedUp"    :"Ordenar Recogido",
+        "orderPickedUpMessage" : "Su pedido #{{orderNum}} fue retirado!",
+        "NoShow" : "Nadie Muestra",
+        "NoShowMessage" : "Su pedido #{{orderNum}} Su pedido no fue retirado. Lo olvidó?",
+        "orderDispatched"  :"Ordenar Despachado",
+        "orderDispatchedMessage" :"Su pedido #{{orderNum}} está en camino!",
+        "orderDelivered"   :"Ordenar Entregado",
+        "orderDeliveredMessage" : "Su pedido #{{orderNum}} fue entregado. Gracias!",
         "orderRequested_pickup"   : "Tiempo para Retirada: {{pickuptime}}\nCliente: {{custName}}\nDetalhes do Pedido: {{orderDetail}}",
         "orderRequested_delivery" : "'Tiempo para Entrega: {{deliverytime}}\nCliente: {{custName}}\nDetalles del Pedido: {{orderDetail}}"
 }
