--- a/config/locales/pt-BR/translation.json
+++ b/config/locales/pt-BR/translation.json
@@ -1,15 +1,26 @@
 {
       "payProcessed"     : "Pagamento Processado - Pedido #{{orderNum}}",
+      "payProcessedMessage" : "{{custName}} pagamento foi processado em {{timestamp.now()}}",
       "payFailed"        : "Pagamento Falhou - Pedido #{{orderNum}}",
-      "orderDeclined"    : "Não aceitou seu pedido neste momento. Tente novamente.",
+      "payFailedMessage" : "{{custName}} pagamento falhou em {{timestamp.now()}}",
+      "orderDeclined"    : "Pedido Recusado",
+      "orderDeclinedMessage" : "{{company}} não aceitou seu pedido neste momento. Tente novamente.",
       "orderAccepted"    : "Pedido Aceito em",
-      "orderQueued"      : "Seu Pedido está na fila para preparação",
-      "orderCooking"     : "Seu Pedido começou a cozinhar",
-      "orderReady"      : "Seu Pedido está pronto",
-      "orderPickedUp"    : "Seu Pedido foi Retirado",
-      "orderNotPickedUp" : "Seu Pedido Não foi Retirado. Você esqueceu?",
-      "orderEnRoute"     : "Seu Pedido está a caminho",
-      "orderDelivered"   : "Seu Pedido foi Entregue",
+      "orderAcceptedMessage" : "Pedido aceito em {{time}}",
+      "orderQueued"      : "Pedido Na Fila",
+      "orderQueuedMessage" : "Seu Pedido #{{orderNum}} está na fila para preparação",
+      "orderCooking"     : "Pedido Cozinhando",
+      "orderCookingMessage" :"Seu Pedido #{{orderNum}} começou a cozinhar",
+      "orderReady"      : "Pedido Pronto",
+      "orderReadyMessage" : "Seu Pedido #{{orderNum}} está pronto",
+      "orderPickedUp"    : "Pedido Cliente Confirmado",
+      "orderPickedUpMessage" : "Seu Pedido #{{orderNum}} foi retirado",
+      "NoShow" : "Ninguém Mostra",
+      "NoShowMessage" : "Seu Pedido #{{orderNum}} Não foi retirado. Você esqueceu?,
+      "orderDispatched" : "Pedido Despachou",
+      "orderDispatchedMessage" :"Seu Pedido #{{orderNum}} está a caminho!",
+      "orderDelivered" : "Pedido Entregue",
+      "orderDeliveredMessage" : "Seu Pedido #{{orderNum}} foi entregue",
       "orderRequested_pickup"   : "Tiempo para Retirada: {{pickuptime}}\nCliente: {{custName}}\nDetalhes do Pedido: {{orderDetail}}",
       "orderRequested_delivery" : "'Tiempo para Entrega: {{deliverytime}}\nCliente: {{custName}}\nDetalles del Pedido: {{orderDetail}}"
 }
