--- a/config/locales/pt-BR/translation.json
+++ b/config/locales/pt-BR/translation.json
@@ -24,5 +24,5 @@
       "orderRequested_pickup"   : "Tempo para Retirada",
       "orderRequested_pickupMessage"   : "{{pickuptime}}\nCliente: {{custName}}\nDetalhes do Pedido: {{orderDetail}}",
       "orderRequested_delivery" : "Tempo para Entrega",
-      "orderRequested_deliveryMessage" : "{{deliverytime}}\nCliente: {{custName}}\nDetalles del Pedido: {{orderDetail}}"
+      "orderRequested_deliveryMessage" : "{{deliverytime}}\nCliente: {{custName}}\nDetalhes del Pedido: {{orderDetail}}"
 }
