--- a/config/locales/pt-BR/translation.json
+++ b/config/locales/pt-BR/translation.json
@@ -16,7 +16,7 @@
       "orderPickedUp"    : "Pedido Cliente Confirmado",
       "orderPickedUpMessage" : "Seu Pedido #{{orderNum}} foi retirado",
       "NoShow" : "Ninguém Mostra",
-      "NoShowMessage" : "Seu Pedido #{{orderNum}} Não foi retirado. Você esqueceu?,
+      "NoShowMessage" : "Seu Pedido #{{orderNum}} Não foi retirado. Você esqueceu?",
       "orderDispatched" : "Pedido Despachou",
       "orderDispatchedMessage" :"Seu Pedido #{{orderNum}} está a caminho!",
       "orderDelivered" : "Pedido Entregue",
