--- a/config/locales/en/translation.json
+++ b/config/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
         "payProcessed"     : "Payment Processed - Order #{{orderNum}}",
-        "payProcessedMessage" : "{{custName}} payment was processed at  {{time}}",
+        "payProcessedMessage" : "{{custName}}'s payment was processed at  {{time}}",
         "payFailed"        : "Payment Failed - Order #{{orderNum}}",
         "payFailedMessage" : "{{custName}} payment failed at {{time}}",
         "orderDeclined"    : "Order Declined",
