--- a/config/locales/en/translation.json
+++ b/config/locales/en/translation.json
@@ -13,13 +13,13 @@
         "orderCookingMessage" :"Your order #{{orderNum}} started cooking",
         "orderReady"       : "Order Ready!",
         "orderReadyMessage" : "Your order #{{orderNum}} is ready!",
-        "orderPickedUp"    : "Your order #{{orderNum}} was picked up!",
+        "orderPickedUp"    : "Order Picked Up!",
         "orderPickedUpMessage" : "Your order #{{orderNum}} was picked up!",
         "NoShow" : "No Show",
         "NoShowMessage" : "Your order #{{orderNum}} was not picked up! Did you forget?",
-        "orderDispatched"  : "Your order #{{orderNum}} is on its way!",
+        "orderDispatched"  : "Order Dispatched!",
         "orderDispatchedMessage"  :"Your order #{{orderNum}} is on its way!",
-        "orderDelivered"  : "Your order #{{orderNum}} was delivered. Thanks again! ",
+        "orderDelivered"  : "Order Delivered!",
         "orderDeliveredMessage"   : "Your order #{{orderNum}} was delivered. Thanks again! ",
         "orderRequested_delivery" : "Delivery Order Request",
         "orderRequested_deliveryMessage" : "Delivery Time: {{deliverytime}}\nCustomer: {{custName}}\nOrder Details: {{orderDetail}}",
