--- a/config/locales/pt-BR/translation.json
+++ b/config/locales/pt-BR/translation.json
@@ -1,8 +1,8 @@
 {
       "payProcessed"     : "Pagamento Processado - Pedido #{{orderNum}}",
       "payProcessedMessage" : "{{custName}}'s pagamento foi processado em {{time}}",
-      "payFailed"        : "Pagamento Falhou - Pedido #{{orderNum}}",
-      "payFailedMessage" : "{{custName}} pagamento falhou em {{time}}",
+      "payFailed"        : "Pagamento Falhou",
+      "payFailedMessage" : "{{custName}} pagamento falhou por pedido #{{orderNum}} em {{time}}",
       "orderDeclined"    : "Pedido Recusado",
       "orderDeclinedMessage" : "Seu pagamento foi processado, mas {{company}} não é capaz de atender seu pedido. Você tem o opção de obter o seu dinheiro reembolsado ou receber um crédito do {{company}} onde você pode retirar seu pedido em um outro periodo.",
       "orderAccepted"    : "Pedido Aceito em",
