--- a/config/locales/en/translation.json
+++ b/config/locales/en/translation.json
@@ -1,12 +1,12 @@
 {
         "payProcessed"     : "Payment Processed - Order #{{orderNum}}",
-        "payProcessedMessage" : "{{custName}}'s payment was processed at  {{time}}",
+        "payProcessedMessage" : "{{custName}}'s payment was processed",
         "payFailed"        : "Payment Failed - Order #{{orderNum}}",
-        "payFailedMessage" : "{{custName}} payment failed at {{time}}",
+        "payFailedMessage" : "{{custName}} payment failed",
         "orderDeclined"    : "Order Declined",
         "orderDeclinedMessage" : "Your payment has been processed, but {{company}} is not able to service your order.  You have the option of either getting your money refunded or receiving a credit from {{company}} where you can pickup your order another time.",
         "orderAccepted"    : "Order Accepted",
-        "orderAcceptedMessage" : "Order accepted at {{time}}",
+        "orderAcceptedMessage" : "Order accepted",
         "orderQueued"      : "Order In Queue",
         "orderQueuedMessage" : "Your order #{{orderNum}} is queued for preparation",
         "orderCooking"     : "Order Cooking",
