--- a/config/locales/pt-BR/translation.json
+++ b/config/locales/pt-BR/translation.json
@@ -1,12 +1,12 @@
 {
       "payProcessed"     : "Pagamento Processado - Pedido #{{orderNum}}",
-      "payProcessedMessage" : "{{custName}}'s pagamento foi processado",
+      "payProcessedMessage" : "{{custName}}'s pagamento foi processado em",
       "payFailed"        : "Pagamento Falhou",
-      "payFailedMessage" : "{{custName}} pagamento falhou por pedido #{{orderNum}}",
+      "payFailedMessage" : "{{custName}} pagamento falhou por pedido #{{orderNum}} em",
       "orderDeclined"    : "Pedido Recusado",
       "orderDeclinedMessage" : "Seu pagamento foi processado, mas {{company}} não é capaz de atender seu pedido. Você tem o opção de obter o seu dinheiro reembolsado ou receber um crédito do {{company}} onde você pode retirar seu pedido em um outro periodo.",
       "orderAccepted"    : "Pedido Aceito",
-      "orderAcceptedMessage" : "Pedido Aceito",
+      "orderAcceptedMessage" : "Pedido aceito em",
       "orderQueued"      : "Pedido Na Fila",
       "orderQueuedMessage" : "Seu Pedido #{{orderNum}} está na fila para preparação",
       "orderCooking"     : "Pedido Cozinhando",
